# nanemu

./: .gitignore  AGENTS.md  Cargo.toml  README.md
defs/etpu/: etpu.isa
defs/powerpc/: e200.coredef  ppc_eref2.isa  ppc_spe.isaext  ppc_vle.isaext
defs/tricore/: tc162.isa
docs/: contributor_guide.md
docs/spec/: alias_to_redirect_addendum.md  context_operator_addendum.md  index_operator_addendum.md  instruction_forms_addendum.md  isa_language_specification.md
docs/spec/examples/: alias.isa  bit-field.isa  complex-forms.isa  error-test-cases.isa  index-operator.isa  instruction-forms.isa  test-cases.isa  unnamed-field.isa  valid-core2.coredef  valid-file.isa  valid-sys.sysdef
integrations/dotnet/procs/: Processor.cs  RegisterTable.cs
integrations/dotnet/programs/: FileBase.cs  StatusUpdateLog.cs
integrations/dotnet/sysbus/: AddressBus.cs  DataBus.cs  DataBusFloatExtensions.cs  DataBusLEB128Extensions.cs  DataBusSignedExtensions.cs  DataBusStreamExtensions.cs  Device.cs  DeviceBus.cs  SymbolBus.cs
obsolete/dotnet/integrations/: ModuleDefinition.cs
obsolete/dotnet/procs/: ArchEmulator.cs  ArchOp.cs  ISA.cs  ProcArbitrator.cs  RegisterTransferLanguage.cs
obsolete/dotnet/programs/: NumericRegister.cs  Utilities.cs
obsolete/dotnet/sysbus/: BusRange.cs  DataBusArbSizeExtension.cs  RegisterBus.cs  (+2 more)
scripts/: package_language_server.sh
spec/: isa_language_specification.md
src/decode/: architecture.md
src/soc/: mod.rs
tests/: mod.rs
tests/powerpc/: isa.rs
tests/tracer/: mod.rs  tracer.coredef  tracer.isa
vscode/: package-lock.json  package.json
(+187 files in other folders)
